--- a/app/views/home/main.html.erb
+++ b/app/views/home/main.html.erb
@@ -90,8 +90,8 @@
                         <i class="fa-solid fa-star"></i>
                     <% end %>
                 </p>
-                <h3>Titulo</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea officiis, saepe quis architecto rerum blanditiis? Rerum at aspernatur veritatis exercitationem iure reiciendis minus non deserunt?</p>
+                <h3>María González</h3>
+                <p>La verdad es que yo andaba bien perdida buscando casa, y ellos me ayudaron un montón. Lo que más me gustó es que me explicaron todo clarito, nada de letras chiquitas. 100% recomendados.</p>
             </div>
             <div class="review_tarjeta">
                 <p class="estrellas">
@@ -99,8 +99,8 @@
                         <i class="fa-solid fa-star"></i>
                     <% end %>
                 </p>
-                <h3>Titulo</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea officiis, saepe quis architecto rerum blanditiis? Rerum at aspernatur veritatis exercitationem iure reiciendis minus non deserunt?</p>
+                <h3>Roberto Sánchez</h3>
+                <p>Yo venía de rentar toda la vida y nunca pensé que iba a poder comprar. Ellos me echaron la mano con todo el rollo del banco y los papeles. Ya llevo 6 meses en mi casa y no me arrepiento para nada. La neta sí te atienden rápido y te resuelven.</p>
             </div>
             <div class="review_tarjeta">
                 <p class="estrellas">
@@ -108,8 +108,8 @@
                         <i class="fa-solid fa-star"></i>
                     <% end %>
                 </p>
-                <h3>Titulo</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea officiis, saepe quis architecto rerum blanditiis? Rerum at aspernatur veritatis exercitationem iure reiciendis minus non deserunt?</p>
+                <h3>Guadalupe Hernádez</h3>
+                <p>Compré mi casita con ellos hace poco y quedé súper contenta. Desde el principio fueron bien atentos, me contestaban rapidísimo por mensaje y me ayudaron con todo el trámite.</p>
             </div>
         </div>
     </div>
