--- a/app/views/home/main.html.erb
+++ b/app/views/home/main.html.erb
@@ -30,7 +30,7 @@
     <div class="about_banner">
         <div class="banner_informacion">
             <h1>Sobre Nosotros</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam minus similique a soluta illo fuga!</p>
+            <p>Tenemos más de 10 años de experiencia en el sector inmobiliario. Ofrecemos asesoría completa en compra, venta y traspaso de propiedades con total transparencia y profesionalismo.</p>
         </div>
         <div class="banner_iconos">
             <div class="iconos">
