--- a/app/views/home/main.html.erb
+++ b/app/views/home/main.html.erb
@@ -30,7 +30,7 @@
     <div class="about_banner">
         <div class="banner_informacion">
             <h1>Sobre Nosotros</h1>
-            <p>Tenemos más de 10 años de experiencia en el sector inmobiliario. Ofrecemos asesoría completa en compra, venta y traspaso de propiedades con total transparencia y profesionalismo.</p>
+            <p>Tenemos más de una década de experiencia en el sector inmobiliario. Ofrecemos asesoría completa en compra, venta y traspaso de propiedades con total transparencia y profesionalismo.</p>
         </div>
         <div class="banner_iconos">
             <div class="iconos">
@@ -38,7 +38,7 @@
                     <i class="fa-solid fa-city"></i>
                 </div>
                 <div class="icono_informacion">
-                    <p> +7 años de experiencia </p>
+                    <p> +10 años de experiencia </p>
                 </div>
             </div>
             <div class="iconos">
