--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,7 +9,7 @@
                     mail
                 </span>
             </div>
-            <div class="footer_texto">contuksainmobiliairia@gmail.com</div>
+            <div class="footer_texto">admin@gpoinmobiliariokcalli.com</div>
         </div>
 
     <div class="footer_detalles">
